# catalog

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.github/workflows/: checks.yaml  release.yml
docs/: deployment.md
migrations/: env.py
migrations/versions/: 0001_initial_assets_table.py
src/cave_catalog/: app.py  config.py  extractors.py  field_registry.py  mat_proxy.py  schemas.py  table_schemas.py  templating.py  validation.py
src/cave_catalog/auth/: __init__.py  middleware.py
src/cave_catalog/credentials/: __init__.py  base.py  dispatch.py  gcs.py
src/cave_catalog/db/: models.py  session.py
src/cave_catalog/routers/: assets.py  health.py  helpers.py  tables.py  ui.py
src/cave_catalog/static/: style.css
src/cave_catalog/templates/: base.html  explore.html  explore_detail.html  explore_edit.html  register.html
src/cave_catalog/templates/fragments/: asset_table.html  preview_result.html  register_error.html  register_success.html
tests/: conftest.py  test_assets.py  test_credential_vending.py  test_explore_ui.py  test_extractors.py  test_field_registry.py  test_helpers.py  test_link_validation.py  test_list_assets.py  test_mat_proxy.py  test_name_check.py  test_table_model.py  test_tables.py  test_ui_auth.py  test_ui_preview.py  test_ui_register.py  test_validation.py
