[project]
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "deltalake>=0.17",
    "fastapi>=0.115.0",
    "httpx>=0.27",
    "polars>=1.0",
    "pydantic-settings>=2.3",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.2",
    "uvicorn[standard]>=0.30.0",
]
description = "CAVE Catalog service — asset registry, discovery, and credential vending"
name = "cave-catalog"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "anyio>=4.3",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/cave_catalog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
