[project]
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "cachetools>=7.0.5",
    "caveclient",
    "cloudpathlib[gs,s3]>=0.23.0",
    "deltalake>=0.17",
    "fastapi>=0.115.0",
    "fsspec>=2026.3.0",
    "gcsfs>=2026.3.0",
    "google-auth>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "polars>=1.0",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.3",
    "pydantic>=2.7",
    "python-multipart>=0.0.26",
    "requests>=2.31",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.2",
    "uvicorn[standard]>=0.30.0",
]
description = "CAVE Catalog service — asset registry, discovery, and credential vending"
name = "cave-catalog"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "anyio>=4.3",
    "mypy>=1.20.0",
    "pre-commit>=3.7",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/cave_catalog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["cave_catalog"]

[tool.uv.sources]
caveclient = { workspace = true }
